Nuevo Descripciones textuales de casos de uso

--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionClientes/darBajaCliente.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionClientes/darBajaCliente.tex
@@ -3,7 +3,7 @@
 
 \renewcommand{\caseUseCreated}{03/02/2020} %Fecha creación
 \renewcommand{\caseUseModified}{03/02/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUdarBajaCliente - Dar baja cliente } %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{\CUdarBajaCliente - Dar de baja cliente } %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion dar de baja un cliente que se encuentra en estado de Alta.} %Resumen
 \renewcommand{\caseUsePeople}{Administrador: quiere dar de baja un cliente.} %Actor: Meta
