--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/crearUbicacion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/crearUbicacion.tex
@@ -6,7 +6,7 @@
 \renewcommand{\caseUseName}{\CUcrearUbicacion - Crear ubicación } %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion crear una ubicación} %Resumen
-\renewcommand{\caseUsePeople}{administradores: quiere crear una ubicación.} %Actor: Meta
+\renewcommand{\caseUsePeople}{Administradores: quiere crear una ubicación.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber iniciado sesión en el sistema y tener el permiso necesario para realizar esta función.} %Precondiciones
 }
