--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -86,10 +86,10 @@
 		\item Gestión ubicaciones
 		\begin{itemize}
 			\itemCaseUse{crearUbicacion}{Crear ubicación}
-			%\itemCaseUse{listarUbicaciones}{Listar ubicaciones}
-			%\itemCaseUse{darBajaUbicacion}{Dar de baja ubicación}
-			%\itemCaseUse{darAltaUbicacion}{Dar de alta ubicación}
-			%\itemCaseUse{modificarUbicacion}{Modificar ubicación}
+			\itemCaseUse{listarUbicaciones}{Listar ubicaciones}
+			\itemCaseUse{darBajaUbicacion}{Dar de baja ubicación}
+			\itemCaseUse{darAltaUbicacion}{Dar de alta ubicación}
+			\itemCaseUse{modificarUbicacion}{Modificar ubicación}
 			%\itemCaseUse{borrarUbicacion}{Borrar ubicación}
 		\end{itemize}
 		\item Gestión remitos
@@ -408,10 +408,10 @@
 	
 			%GestionUbicaciones
 			\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/crearUbicacion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/listarUbicaciones.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/darBajaUbicacion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/darAltaUbicacion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/modificarUbicacion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/listarUbicaciones.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/darBajaUbicacion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/darAltaUbicacion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/modificarUbicacion.tex}
 			%\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/borrarUbicacion.tex}
 
 			%GestionRemitos
