--- a/Informe Final/Capitulos/Capitulo2/cap2sec1.tex
+++ b/Informe Final/Capitulos/Capitulo2/cap2sec1.tex
@@ -94,6 +94,7 @@
 				Los posibles estados de una venta son los siguientes:
 				\begin{itemize}
 					\item \textbf{En edición:} Cuando se está creando la venta o bien cuando todavía no se registró ningún pago y esta permitido borrar la venta.
+					\item \item \textbf{En revisión:} Cuando se necesita que un administrador revise una venta antes de continuar.
 					\item \textbf{Pendiente:} Cuando al menos una linea de producto se encuentra en estado distinto de cancelada o entregada.
 					\item \textbf{Cancelada:} Cuando todas las líneas de producto se encuentran en estado cancelada. El/Los presupuesto/s y sus respectivas líneas vuelven al estado en que se encontraban antes de realizar la venta. Además se dará de baja todas las facturas y recibos asociados, y se realizará una nota de crédito de ser necesario.
 					\item \textbf{Entregada:} Cuando todas las líneas de producto no canceladas estén en estado entregadas.
