--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/transformarPresupuestoEnVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/transformarPresupuestoEnVenta.tex
@@ -17,7 +17,8 @@
     \addCaseUseStep{El vendedor indica uno o más presupuestos a partir de los cuales desea generar la venta.}
     \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione un cliente existente y se ejecuta el \CUlistarLineasPresupuesto\ (Listar lineas de presupuesto) para cada presupuesto seleccionado, mostrando una opción para indicar si desea añadir dicha linea de presupuesto a la venta.}
     \addCaseUseStep{El vendedor selecciona un cliente existente y las lineas de presupuestos que desea agregar a la venta.}
-    \addCaseUseStep{ZMGestion crea una venta en estado "En edición" para el cliente seleccionado, ejecuta el CUcrearLineaVenta\ (Crear linea de venta) para cada linea de presupuesto seleccionada, cambia el estado de los presupuestos seleccionados a "Vendido", el estado de las lineas de presupuesto seleccionadas a "Utilizadas" y las no seleccionadas a "No utilizadas".}
+    \addCaseUseStep{ZMGestion crea una venta en estado "En edición" para el cliente seleccionado, ejecuta el \CUcrearLineaVenta\ (Crear linea de venta) con los valores de producto, cantidad y precio de cada linea de presupuesto seleccionada. Además se realiza una pregunta al vendedor indicando si desea agregar una nueva linea de venta.}
+    \addCaseUseStep{En caso afirmativo se ejecuta el \CUcrearLineaVenta\ (Crear linea de venta) y se vuelve a realizar la pregunta. En caso contrario ZMGestión verifica que las lineas de ventas creadas tengan el precio actual del producto, en caso de que una o más lineas de venta tengan un precio distinto al precio actual, la venta se pasa al estado "En revisión", caso contrario se pasa al estado "Pendiente" y, en este caso, las lineas de presupuesto que se utilizaron para la venta se pasan al estado "Utilizadas" y las que no se utilizaron al estado "No utilizadas".}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
 	\newAlternative{A1: Uno o más de los presupuestos seleccionados se encuentra en estado "Vendido".}{1} %Flujo alternativo A1.
@@ -26,7 +27,7 @@
     \caseUseRow{}
     \caseUseRow{El escenario vuelve al punto 1.}
     \newAlternative{A2:El vendedor ha dejado el campo de cliente vacío.}{3} %Flujo alternativo A1.
-	\caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
+	\caseUseRow{La secuencia A2 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe seleccionar un cliente válido.}
     \caseUseRow{}
     \caseUseRow{El escenario vuelve al punto 2.}
