--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/crearVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/crearVenta.tex
@@ -15,12 +15,11 @@
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El vendedor accede a la pantalla para crear ventas.}
     \addCaseUseStep{ZMGestion le muestra un formulario para que el vendedor seleccione un cliente.}
-    \addCaseUseStep{El vendedor selecciona un cliente y modifica el periodo de validez.}%3
-    \addCaseUseStep{ZMGestion crea un presupuesto en estado de "En creación" para el cliente con el periodo de validez ingresado por el vendedor.}%4
-    \addCaseUseStep{ZMGestion pregunta si desea agregar una nueva linea de presupuesto.}%5
-    \addCaseUseStep{En caso afirmativo se ejecuta el \CUcrearLineaPresupuesto (Crear linea de presupuesto). En caso contrario ZMGestión pasa el estado del presupuesto a "Creado".}
-    \addCaseUseStep{ZMGestión muestra un mensaje indicando el éxito de la operacion y vuelve al punto 5 del escenario principal.
-    }
+    \addCaseUseStep{El vendedor selecciona un cliente.}%3
+    \addCaseUseStep{ZMGestion crea una venta en estado de "En revisión" para el cliente seleccionado.}%4
+    \addCaseUseStep{ZMGestion pregunta si desea agregar una nueva linea de venta.}%5
+    \addCaseUseStep{En caso afirmativo se ejecuta el \CUcrearLineaVenta (Crear linea de venta) y se vuelve a realizar la pregunta. En caso contrario ZMGestión verifica que las lineas de ventas creadas tengan el precio actual del producto, en caso de que todas las lineas de venta tengan el precio actual para el producto y tela seleccionados, la venta se pasa al estado "En edición", el estado de las lineas de presupuesto que se utilizaron se pasan a "Utilizadas" y las que no se utilizaron al estado "No utilizadas".} %REVISAR ESTADO DE LAS LINEAS DE VENTA. SIGUEN EN EDICION... SE DEBERIA CAMBIAR A ALGUN OTRO ESTADO? EL ESTADO DE LA VENTA SE DETERMINA A PARTIR DEL ESTADO DE LAS LINEAS DE VENTA Y CREAR UNA VENTA NO SIGNIFICA QUE HAYA HECHO UN PAGO...
+    \addCaseUseStep{ZMGestión muestra un mensaje indicando el éxito de la operacion y vuelve al punto 5 del escenario principal.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
 	\newAlternative{A1: No ha seleccionado ningún cliente.}{3} %Flujo alternativo A1.
@@ -28,15 +27,11 @@
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe seleccionar un cliente.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
-	\newAlternative{A2: No ha agregado ninguna linea de presupuesto.}{5} %Flujo alternativo A2.
-    \caseUseRow{La secuencia A2 comienza luego del punto 5 del escenario principal.}%¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe agregar al menos una linea de presupuesto.}
+	\newAlternative{A2: No ha agregado ninguna linea de venta.}{6} %Flujo alternativo A2.
+    \caseUseRow{La secuencia A2 comienza luego del punto 6 del escenario principal.}%¡Indicar número paso!
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe agregar al menos una linea de venta.}
     \caseUseRow{El escenario vuelve al punto 5.}
     \caseUseRow{}
-	\newAlternative{A3: No ha agregado ninguna linea de presupuesto.}{3} %Flujo alternativo A3.
-    \caseUseRow{La secuencia A3 comienza luego del punto 3 del escenario principal.}%¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no cuenta con los permisos necesarios para modificar el periodo de validez de un presupuesto.}
-    \caseUseRow{El escenario vuelve al punto 2.}
 }
 
 \item Caso de uso \caseUseName
