--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -90,7 +90,7 @@
 			\itemCaseUse{darBajaUbicacion}{Dar de baja ubicación}
 			\itemCaseUse{darAltaUbicacion}{Dar de alta ubicación}
 			\itemCaseUse{modificarUbicacion}{Modificar ubicación}
-			%\itemCaseUse{borrarUbicacion}{Borrar ubicación}
+			\itemCaseUse{borrarUbicacion}{Borrar ubicación}
 		\end{itemize}
 		\item Gestión remitos
 		\begin{itemize}
@@ -412,7 +412,7 @@
 			\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/darBajaUbicacion.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/darAltaUbicacion.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/modificarUbicacion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/borrarUbicacion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/borrarUbicacion.tex}
 
 			%GestionRemitos
 			%\input{Capitulos/Capitulo4/CasosUso/GestionRemitos/crearRemito.tex}
