Cambios en cap2sec1

--- a/Informe Final/Capitulos/Capitulo2/cap2sec1.tex
+++ b/Informe Final/Capitulos/Capitulo2/cap2sec1.tex
@@ -93,10 +93,9 @@
 				\paragraph\indent
 				Los posibles estados de una venta son los siguientes:
 				\begin{itemize}
-					%En edición, pendiente, cancelada, en prodducccin, finalizada, verificada
 					\item \textbf{En creación:} Cuando no tiene lineas de producto o todas las lineas de producto se encuentran en creación.
 					\item \textbf{Congelada:} Cuando se quita la posibilidad de modificar o borrar la venta para esperar la adhesión de un pago.
-					\item \item \textbf{En revisión:} Cuando se necesita que un administrador revise una venta ya que una linea de producto perteneciente a la venta no tiene el precio actual.
+					\item \textbf{En revisión:} Cuando se necesita que un administrador revise una venta ya que una linea de producto perteneciente a la venta no tiene el precio actual.
 					\item \textbf{Pendiente:} Cuando al menos una linea de producto se encuentra en estado distinto de en creación, cancelada o entregada.
 					\item \textbf{Cancelada:} Cuando todas las líneas de producto se encuentran en estado cancelada. El/Los presupuesto/s y sus respectivas líneas vuelven al estado en que se encontraban antes de realizar la venta. Además se dará de baja todas las facturas y recibos asociados, y se realizará una nota de crédito de ser necesario.
 					\item \textbf{Entregada:} Cuando todas las líneas de producto no canceladas estén en estado entregadas.
