--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -132,20 +132,20 @@
 		\item Gestión ventas
 		\begin{itemize}
 			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearVenta}{Crear venta}
-			%\itemCaseUse{buscarAvanzadoVentas}{Buscar avanzado ventas}
-			%\itemCaseUse{listarLineasVenta}{Listar líneas de venta}
-			%\itemCaseUse{modificarVenta}{Modificar venta}
-			%\itemCaseUse{borrarVenta}{Borrar venta}
+			\itemCaseUse{crearVenta}{Crear venta}
+			\itemCaseUse{buscarAvanzadoVentas}{Buscar avanzado ventas}
+			\itemCaseUse{listarLineasVenta}{Listar líneas de venta}
+			\itemCaseUse{modificarVenta}{Modificar venta}
+			\itemCaseUse{borrarVenta}{Borrar venta}
 			%\itemCaseUse{generarOrdenProduccionDesdeVenta}{Generar orden de producción a partir de venta}
 			%\itemCaseUse{revisarVenta}{Revisar venta}
 		\end{itemize}
 		\item Gestión líneas de venta
 		\begin{itemize}
 			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearLineaVenta}{Crear línea de venta}
-			%\itemCaseUse{modificarLineaVenta}{Modificar línea de venta}
-			%\itemCaseUse{borrarLineaVenta}{Borrar línea de venta}
+			\itemCaseUse{crearLineaVenta}{Crear línea de venta}
+			\itemCaseUse{modificarLineaVenta}{Modificar línea de venta}
+			\itemCaseUse{borrarLineaVenta}{Borrar línea de venta}
 		\end{itemize}
 		\item Gestión facturas
 		\begin{itemize}
@@ -445,18 +445,18 @@
 			\input{Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/borrarLineaPresupuesto.tex}
 
 			%GestionVentas
-			%\input{Capitulos/Capitulo4/CasosUso/GestionVentas/crearVenta.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionVentas/buscarAvanzadoVentas.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionVentas/listarLineasVenta.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/crearVenta.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/buscarAvanzadoVentas.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/listarLineasVenta.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex}
 			%\input{Capitulos/Capitulo4/CasosUso/GestionVentas/generarOrdenProduccionDesdeVenta.tex}
 			%\input{Capitulos/Capitulo4/CasosUso/GestionVentas/revisarVenta.tex}
 
 			%GestionLineasVenta
-			%\input{Capitulos/Capitulo4/CasosUso/GestionLineasVenta/crearLineaVenta.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionLineasVenta/modificarLineaVenta.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionLineasVenta/borrarLineaVenta.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasVenta/crearLineaVenta.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasVenta/modificarLineaVenta.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasVenta/borrarLineaVenta.tex}
 
 			%GestionFacturas
 			%\input{Capitulos/Capitulo4/CasosUso/GestionFacturas/crearFactura.tex}
