Nuevo Diagramas de estado

--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -350,7 +350,7 @@
 	\label{fig:GestionObservaciones}
 	\end{figure}
 	\clearpage %salto de pagina
-	\subsection{Descripción textual de los casos de uso}
+	\subsection{Descripción textual de los casos de uso y diagramas de actividad}
 		\begin{enumerate}
 			%Sesiones
 			\input{Capitulos/Capitulo4/CasosUso/Sesiones/iniciarSesion.tex}
@@ -508,7 +508,14 @@
 			%\input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/borrarObservacion.tex}	
 
 		\end{enumerate}
+	
+	\subsection{Diagramas de estado}
+	Solo se especificarán los diagramas de estado más relevantes del sistema.
 
+	%\stateDiagram{empleados}{Diagrama de estado - Empleados}
+	%\stateDiagram{presupuestos}{Diagrama de estado - Presupuestos}
+	%\stateDiagram{ventas}{Diagrama de estado - Ventas}
+	%\stateDiagram{ordenesProduccion}{Diagrama de estado - Órdenes de producción}
 		
 	
     
