Cambios para merge

--- a/Informe Final/comandos.tex
+++ b/Informe Final/comandos.tex
@@ -12,7 +12,7 @@
 \newcommand{\stateDiagram}[2]{
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=\textwidth,height=0.95\textheight,keepaspectratio]{DiagramaDeEstado/#1}
+		\includegraphics[width=\textwidth,height=0.95\textheight,keepaspectratio]{DiagramasEstado/DiagramaDeEstado/#1}
 		\caption{#2}
 	\label{fig:#1}
 	\end{figure}
