--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -512,10 +512,10 @@
 	\subsection{Diagramas de estado}
 	Solo se especificarán los diagramas de estado más relevantes del sistema.
 
-	%\stateDiagram{empleados}{Diagrama de estado - Empleados}
-	%\stateDiagram{presupuestos}{Diagrama de estado - Presupuestos}
-	%\stateDiagram{ventas}{Diagrama de estado - Ventas}
-	%\stateDiagram{ordenesProduccion}{Diagrama de estado - Órdenes de producción}
+	\stateDiagram{empleados}{Diagrama de estado - Empleados}
+	\stateDiagram{presupuestos}{Diagrama de estado - Presupuestos}
+	\stateDiagram{ventas}{Diagrama de estado - Ventas}
+	\stateDiagram{ordenesProduccion}{Diagrama de estado - Órdenes de producción}
 		
 	
     
